Implemented DELETE for users api
